# MLOPS

./: .gitignore  AM1.md  CONSIGNAS.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
airflow/dags/: drift_config.py  drift_process_taskflow.py  etl_config.py  etl_process_taskflow.py
docker/airflow/: requirements.txt
docker/fastapi/: Dockerfile  requirements.txt
docker/trainer/: Dockerfile  requirements.txt
dockerfiles/fastapi/: README.md  app.py  requirements.txt
dockerfiles/trainer/: Dockerfile  requirements.txt
mlflow_scripts/: README.md  check_mlflow_model.py  demo_champion_challenger.py  demo_predictor.py  mlflow_training_helper.py  mlflow_xgboost_poc.py  mlflow_xgboost_poc_docker.py  train_all_8_models.py  train_multiple_models.py  verify_mlflow_setup.py
mlflow_system/: INSTRUCCIONES_INICIO.md  README.md  docker-compose.yml
modelos/: README.md  binary_network_experiment.ipynb  deep_learning.ipynb  helpers.py  machine_learning.ipynb  machine_learning_PCA.ipynb  model_comparison.ipynb
modelos/metricas/: adaboost_metrics.json  arbol_de_decision_metrics.json  bagging_lr_metrics.json  deep_learning_base_metrics.json  deep_learning_class_weighting_metrics.json  k-nearest_neighbors_metrics.json  random_forest_metrics.json  regresion_logistica_metrics.json  svm_linear_metrics.json  xgboost_metrics.json
preprocesamiento/: 1_Creacion_dataset_AndD.ipynb  2_EDA_dataset_procesado_AndD.ipynb  3_Outliers_Encoding.ipynb  4_Escalado.ipynb  5_Balanceo.ipynb  6_Feature_Selection_and_Extraction.ipynb  README.md
src/api/: app.py  (+1 more)
tests/: conftest.py
(+32 files in other folders)
