[project]
name = "tp-final"
version = "0.1.0"
description = "TP final para la materia Analisis de Datos - CEIA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "category-encoders>=2.8.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "imbalanced-learn>=0.14.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "missingno>=0.5.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
    "threadpoolctl>=3.6.0",
    "torch>=2.9.0",
    "imbalanced-learn>=0.14.0",
    "jinja2>=3.1.6",
    "xgboost>=3.1.0",
    "mlflow>=3.6.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.9"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]
